--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,8 @@
-{% extends 'bootstrap/base.html' %}
-
-{% block title %}
-    Siguiente Letra
-{% endblock %}
-
-
-{% block content %}
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+    <title>Siguiente Letra</title>
     <div class="container">
         <h1>Buscando la siguiente letra</h1>
         {% with messages = get_flashed_messages() %}
@@ -26,4 +23,5 @@
             <p>{{ form.submit() }}</p>
         </form>
     </div>
-{% endblock%}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
