--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,25 +3,31 @@
 </head>
 <body>
     <title>Siguiente Letra</title>
-    <div class="container">
-        <h1>Buscando la siguiente letra</h1>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col" align="center">
+                <h1>Buscando letra</h1>
+            </div>
+        </div>
         <form action="" method="post" novalidate>
             {{ form.hidden_tag() }}
-            <p>
-                {{ form.letras.label }}<br>
-                {{ form.letras(size=32) }}
-            </p>
-            <p>{{ form.submit() }}</p>
+            {% if letras|length>0 %}
+                <p>{{letras}} {{ form.letras(size=2) }} {{ form.submit() }}</p>
+            {% else %}
+                <p>{{ form.letras(size=2) }} {{ form.submit() }}</p>
+            {% endif %}
         </form>
+        <div class="row">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <ul>
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+            {% endwith %}
+            </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
