--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
         <form action="" method="post" novalidate>
             {{ form.hidden_tag() }}
             {% if letras|length>0 %}
-                <p>{{letras}} {{ form.letras(size=2) }} {{ form.submit() }}</p>
+                <p>{{letras}} {{ form.letras(size=1) }} {{ form.submit() }} <a href="/reset" class="btn btn-danger" role="button">Reset</a></p>
             {% else %}
                 <p>{{ form.letras(size=2) }} {{ form.submit() }}</p>
             {% endif %}
@@ -29,5 +29,12 @@
             {% endwith %}
             </div>
     </div>
+    <!-- Footer -->
+    <footer class="page-footer font-small blue pt-4">
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2022 Copyright: tacombel@gmail.com</div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
