--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,8 @@
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
     <title>Siguiente Letra</title>
     <div class="container-fluid">
@@ -9,14 +11,19 @@
                 <h1>Buscando letra</h1>
             </div>
         </div>
-        <form action="" method="post" novalidate>
-            {{ form.hidden_tag() }}
-            {% if letras|length>0 %}
-                <p>{{letras}} {{ form.letras(size=1) }} {{ form.submit() }} <a href="/reset" class="btn btn-danger" role="button">Reset</a></p>
-            {% else %}
-                <p>{{ form.letras(size=2) }} {{ form.submit() }}</p>
-            {% endif %}
-        </form>
+        <div class="row">
+            <div class="col" align="center">
+                <form action="" method="post" novalidate>
+                    {{ form.hidden_tag() }}
+                    {% if letras|length>0 %}
+                    <p>{{letras}} {{ form.letras(size=1) }} {{ form.submit() }} <a href="/reset" class="btn btn-danger"
+                            role="button">Reset</a></p>
+                    {% else %}
+                    <p>{{ form.letras(size=2) }} {{ form.submit() }}</p>
+                    {% endif %}
+                </form>
+            </div>
+        </div>
         <div class="row">
             {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -27,7 +34,7 @@
             </ul>
             {% endif %}
             {% endwith %}
-            </div>
+        </div>
     </div>
     <!-- Footer -->
     <footer class="page-footer font-small blue pt-4">
@@ -36,5 +43,7 @@
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
