--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,7 @@
 <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -8,11 +11,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col" align="center">
-                <h1>Buscando letra</h1>
+                <h1 style="font-size: 13vw;">Buscando letra</h1>
             </div>
         </div>
         <div class="row">
             <div class="col" align="center">
+                <p style="font-size: 13vw;">
                 <form action="" method="post" novalidate>
                     {{ form.hidden_tag() }}
                     {% if letras|length>0 %}
@@ -22,6 +26,7 @@
                     <p>{{ form.letras(size=2) }} {{ form.submit() }}</p>
                     {% endif %}
                 </form>
+                </p>
             </div>
         </div>
         <div class="row">
