Sistema de muestra de opciones

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,29 +16,170 @@
         </div>
         <div class="row">
             <div class="col" align="center">
-                <p style="font-size: 13vw;">
                 <form action="" method="post" novalidate>
                     {{ form.hidden_tag() }}
                     {% if letras|length>0 %}
-                    <p>{{letras}} {{ form.letras(size=1) }} {{ form.submit() }} <a href="/reset" class="btn btn-danger"
+                    <div class="row" style="font-size: 10vw;">
+                        <div class="col-1"></div>
+                        <div class="col-10" align="left">{{letras}}</div>
+                        <div class="col-1"></div>
+                    </div>
+                    <p>{{ form.letras(size=1) }} {{ form.submit() }} <a href="/reset" class="btn btn-danger"
                             role="button">Reset</a></p>
                     {% else %}
                     <p>{{ form.letras(size=2) }} {{ form.submit() }}</p>
                     {% endif %}
                 </form>
-                </p>
             </div>
         </div>
-        <div class="row">
-            {% with messages = get_flashed_messages() %}
-            {% if messages %}
-            <ul>
-                {% for message in messages %}
-                <li>{{ message }}</li>
-                {% endfor %}
-            </ul>
+        <div class="container-fluid">
+        <div class="row" style="font-size: 10vw" align="center">
+            <div class="col-1"></div>
+            {% if ("A" in candidatas) %}
+            <div class="col-1"><p>A</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
             {% endif %}
-            {% endwith %}
+            {% if ("B" in candidatas) %}
+            <div class="col-1"><p>B</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("C" in candidatas) %}
+            <div class="col-1"><p>C</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("D" in candidatas) %}
+            <div class="col-1"><p>D</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("E" in candidatas) %}
+            <div class="col-1"><p>E</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("F" in candidatas) %}
+            <div class="col-1"><p>F</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("G" in candidatas) %}
+            <div class="col-1"><p>G</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("H" in candidatas) %}
+            <div class="col-1"><p>H</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("I" in candidatas) %}
+            <div class="col-1"><p>I</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("J" in candidatas) %}
+            <div class="col-1"><p>J</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            <div class="col-1"></div>
+        </div>
+        <div class="row" style="font-size: 10vw" align="center">
+            <div class="col-1"></div>
+            {% if ("K" in candidatas) %}
+            <div class="col-1"><p>K</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("L" in candidatas) %}
+            <div class="col-1"><p>L</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("M" in candidatas) %}
+            <div class="col-1"><p>M</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("N" in candidatas) %}
+            <div class="col-1"><p>N</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("Ñ" in candidatas) %}
+            <div class="col-1"><p>Ñ</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("O" in candidatas) %}
+            <div class="col-1"><p>O</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("P" in candidatas) %}
+            <div class="col-1"><p>P</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("Q" in candidatas) %}
+            <div class="col-1"><p>Q</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("R" in candidatas) %}
+            <div class="col-1"><p>R</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("S" in candidatas) %}
+            <div class="col-1"><p>S</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            <div class="col-1"></div>
+        </div>
+        <div class="row" style="font-size: 10vw" align="center">
+            <div class="col-2"></div>
+            {% if ("T" in candidatas) %}
+            <div class="col-1"><p>T</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("U" in candidatas) %}
+            <div class="col-1"><p>U</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("V" in candidatas) %}
+            <div class="col-1"><p>V</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("W" in candidatas) %}
+            <div class="col-1"><p>W</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("X" in candidatas) %}
+            <div class="col-1"><p>X</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("Y" in candidatas) %}
+            <div class="col-1"><p>Y</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            {% if ("Z" in candidatas) %}
+            <div class="col-1"><p>Z</p></div>
+            {% else %}
+            <div class="col-1"><p></p></div>
+            {% endif %}
+            <div class="col-2"></div>
+        </div>
         </div>
     </div>
     <!-- Footer -->
